--- a/index.html
+++ b/index.html
@@ -23,14 +23,13 @@ canvas{
 }
 
 .container{
-    width:740px;
-    max-width:94%;
+    width:760px;
+    max-width:95%;
     margin:70px auto;
-    background:rgba(0,20,10,0.9);
+    background:rgba(0,20,10,0.92);
     padding:25px;
     border-radius:16px;
-    box-shadow:0 0 35px #00ff9c66;
-    backdrop-filter:blur(6px);
+    box-shadow:0 0 40px #00ff9c66;
 }
 
 h1{
@@ -40,7 +39,7 @@ h1{
 
 textarea{
     width:100%;
-    height:170px;
+    height:180px;
     background:#001a0d;
     border:1px solid #00ff9c55;
     border-radius:10px;
@@ -53,7 +52,7 @@ textarea{
 button{
     width:100%;
     margin-top:15px;
-    padding:13px;
+    padding:14px;
     background:#00ff9c;
     border:none;
     color:#002b19;
@@ -64,7 +63,7 @@ button{
 
 .result{
     margin-top:20px;
-    padding:15px;
+    padding:18px;
     background:#001a0d;
     border-radius:10px;
     border:1px solid #00ff9c33;
@@ -74,6 +73,11 @@ button{
 .danger{color:#ff4d4d;font-weight:bold;}
 .medium{color:#ffd633;font-weight:bold;}
 .safe{color:#00ff9c;font-weight:bold;}
+
+.section-title{
+    font-weight:bold;
+    text-decoration:underline;
+}
 </style>
 </head>
 
@@ -84,14 +88,15 @@ button{
 <div class="container">
 <h1>🛡 Cyber Threat Analyzer</h1>
 
-<textarea id="msg" placeholder="الصق الرسالة أو الإيميل هنا..."></textarea>
+<textarea id="msg" placeholder="الصق الرسالة أو البريد الإلكتروني هنا..."></textarea>
 <button onclick="analyze()">تحليل التهديد</button>
 
 <div class="result" onmouseover="readResult()">
-<p>النتيجة: <span id="result">—</span></p>
-<p>نسبة الخطورة: <span id="score">—</span></p>
-<p>الوصف: <span id="reason">—</span></p>
-<p>MITRE ATT&CK: <span id="mitre">—</span></p>
+<p><span class="section-title">النتيجة:</span> <span id="result">—</span></p>
+<p><span class="section-title">نسبة الخطورة:</span> <span id="score">—</span></p>
+<p><span class="section-title">التحليل الأمني:</span> <span id="analysis">—</span></p>
+<p><span class="section-title">التوصية الأمنية:</span> <span id="advice">—</span></p>
+<p><span class="section-title">MITRE ATT&CK:</span> <span id="mitre">—</span></p>
 </div>
 </div>
 
@@ -100,7 +105,7 @@ button{
 </audio>
 
 <script>
-/* Matrix */
+/* Matrix Background */
 const c=document.getElementById("matrix"),x=c.getContext("2d");
 c.width=innerWidth;c.height=innerHeight;
 const chars="01",fs=14,cols=c.width/fs,drops=Array(Math.floor(cols)).fill(1);
@@ -116,90 +121,86 @@ drops[i]++;
 });
 },33);
 
-/* 🔥 كلمات تصيّد شاملة جدًا */
-const phishingWords = [
-/* استعجال وتهديد */
-"urgent","immediately","final notice","last warning","action required",
-"عاجل","تحذير","آخر إشعار","خلال 24 ساعة","سيتم إيقاف",
-
-/* بنوك ومدفوعات */
-"bank","account","payment","invoice","refund","transfer","iban","swift",
-"otp","pin","cvv","credit card",
-"الراجحي","الأهلي","ساب","الإنماء","البلاد","stc pay","مدى","ابل باي","سداد","تمارا","تابي",
-
-/* حسابات وكلمات مرور */
-"password","username","login","verify","reset","recover","authentication",
-"كلمة المرور","اسم المستخدم","تسجيل الدخول","تأكيد","توثيق","إعادة تعيين",
-
-/* جهات حكومية */
-"absher","nafath","gov","moi","zakat","vat","sdaia","etimad",
-"أبشر","نفاذ","الزكاة","ضريبة","وزارة","الهوية","اعتماد",
-
-/* شحن وتوصيل */
-"shipment","delivery","customs","package","tracking",
-"سمسا","ارامكس","dhl","fedex","ups","الجمارك","الشحنة",
-
-/* روابط واختصارات */
-"http","https","bit.ly","tinyurl","t.co",".ru",".tk",".xyz",".zip",".exe",
-
-/* جوائز ووظائف */
-"winner","congratulations","reward","bonus","job offer","salary",
-"مبروك","فزت","جائزة","مكافأة","عرض وظيفة","راتب",
-
-/* تقنية وأمن */
-"security alert","unusual activity","breach","compromised",
-"تنبيه أمني","نشاط غير معتاد","اختراق","تم تعليق الحساب",
-
-/* هندسة اجتماعية */
-"support team","security team","administrator","IT department",
-"الدعم الفني","خدمة العملاء","مسؤول النظام","قسم التقنية"
+/* كلمات تصيّد موسعة */
+const phishingWords=[
+"urgent","verify","login","password","otp","bank","account","suspend",
+"reset","security alert","unusual activity","confirm","payment",
+"عاجل","تحذير","تحديث","حسابك","إيقاف","رمز","الدعم الفني",
+"أبشر","نفاذ","الراجحي","الأهلي","ساب","stc pay","مدى","سداد",
+"جائزة","مبروك","فزت","عرض وظيفة","راتب",
+"bit.ly","tinyurl",".ru",".exe",".zip",".tk",".xyz"
 ];
 
-const linkRegex=/https?:\/\/|\.ru|\.tk|\.xyz|bit\.ly|tinyurl|\.exe|\.zip/i;
+const linkRegex=/https?:\/\/|bit\.ly|tinyurl|\.exe|\.zip|\.ru|\.tk|\.xyz/i;
+
 let lastSpeech="";
 
+/* صوت محسّن */
+function speak(text){
+    speechSynthesis.cancel();
+    const s=new SpeechSynthesisUtterance(text);
+    s.lang="ar-SA";
+    s.rate=0.85;
+    s.pitch=1;
+    speechSynthesis.speak(s);
+}
+
+/* التحليل */
 function analyze(){
 let t=document.getElementById("msg").value.toLowerCase();
-let score=0,mitre=[],desc="لا يوجد تهديد واضح";
+let score=0;
+let mitre=[];
 
 phishingWords.forEach(w=>{
-if(t.includes(w)){score+=6;mitre.push("T1566 Phishing");}
+if(t.includes(w)){
+    score+=7;
+    mitre.push("T1566 – Phishing");
+}
 });
 
-if(linkRegex.test(t)){score+=20;mitre.push("T1204 User Execution");}
-
-let res="آمن",cls="safe";
-if(score>=70){
-res="خطر عالي";
-cls="danger";
-desc="رسالة تصيّد احتيالي عالية الخطورة تهدف لسرقة بيانات حساسة";
-document.getElementById("alarm").play();
-}
-else if(score>=35){
-res="مشبوه";
-cls="medium";
-desc="رسالة مشبوهة تعتمد على الهندسة الاجتماعية";
+if(linkRegex.test(t)){
+    score+=25;
+    mitre.push("T1204 – User Execution");
 }
 
-document.getElementById("result").innerHTML=`<span class="${cls}">${res}</span>`;
+let result="آمن";
+let cls="safe";
+let analysis="لم يتم اكتشاف مؤشرات تصيّد أو تهديد واضح في الرسالة.";
+let advice="يمكنك التعامل مع الرسالة بشكل طبيعي مع الاستمرار بالحذر.";
+
+if(score>=65){
+    result="خطر عالي";
+    cls="danger";
+    analysis="تم اكتشاف رسالة تصيّد احتيالي عالية الخطورة تعتمد على الهندسة الاجتماعية، وتهدف إلى خداع المستخدم للحصول على بيانات حساسة مثل كلمات المرور أو رموز التحقق أو البيانات البنكية.";
+    advice="يوصى بعدم الضغط على أي رابط، وعدم مشاركة أي معلومات شخصية أو مالية، وحذف الرسالة فورًا، مع الإبلاغ عنها للجهة المختصة.";
+    document.getElementById("alarm").play();
+}
+else if(score>=30){
+    result="مشبوه";
+    cls="medium";
+    analysis="الرسالة تحتوي على مؤشرات محتملة للتصيّد الاحتيالي أو محاولات خداع غير مباشرة، وقد تستهدف إثارة الخوف أو الاستعجال.";
+    advice="يوصى بالتحقق من مصدر الرسالة، وعدم التفاعل مع الروابط أو المرفقات حتى التأكد من صحتها.";
+}
+
+document.getElementById("result").innerHTML=`<span class="${cls}">${result}</span>`;
 document.getElementById("score").innerText=score+"%";
-document.getElementById("reason").innerText=desc;
+document.getElementById("analysis").innerText=analysis;
+document.getElementById("advice").innerText=advice;
 document.getElementById("mitre").innerText=[...new Set(mitre)].join(", ")||"—";
 
-speak(`نتيجة التحليل ${res} بنسبة خطورة ${score} بالمئة`);
-lastSpeech=desc;
+lastSpeech=`نتيجة التحليل ${result}. ${analysis} التوصية الأمنية: ${advice}`;
+speak(lastSpeech);
 }
 
-function speak(t){
-speechSynthesis.cancel();
-let s=new SpeechSynthesisUtterance(t);
-s.lang="ar-SA";
-speechSynthesis.speak(s);
-}
-
+/* قراءة عند المرور */
 function readResult(){
-if(lastSpeech)speak(lastSpeech);
+if(lastSpeech) speak(lastSpeech);
 }
+
+/* قراءة عند التركيز */
+document.getElementById("msg").addEventListener("focus",()=>{
+speak("مربع إدخال الرسالة. الرجاء لصق النص ثم الضغط على زر تحليل التهديد.");
+});
 </script>
 
 </body>
