Update suspicious keywords in index.html
Added additional Arabic phrases and financial terms to the list of suspicious keywords.

--- a/index.html
+++ b/index.html
@@ -128,7 +128,46 @@ const phishingWords=[
 "عاجل","تحذير","تحديث","حسابك","إيقاف","رمز","الدعم الفني",
 "أبشر","نفاذ","الراجحي","الأهلي","ساب","stc pay","مدى","سداد",
 "جائزة","مبروك","فزت","عرض وظيفة","راتب",
-"bit.ly","tinyurl",".ru",".exe",".zip",".tk",".xyz"
+"bit.ly","tinyurl",".ru",".exe",".zip",".tk",".xyz""تحقق من حسابك",
+    "تحديث بياناتك",
+    "تم إيقاف حسابك",
+    "تم تعليق حسابك",
+    "محاولة تسجيل دخول",
+    "نشاط غير معتاد",
+    "تأكيد الهوية",
+    "تأكيد حسابك",
+    "تغيير كلمة المرور",
+    "كلمة المرور",
+    "رمز التحقق",
+    "رمز الأمان",
+    "اضغط هنا",
+    "سجل الدخول الآن",
+    "الدخول إلى حسابك",
+    "تحذير أمني",
+    "إجراء عاجل",
+
+    // كلمات مالية
+    "حسابك البنكي",
+    "بطاقتك البنكية",
+    "بطاقة الائتمان",
+    "تحويل مالي",
+    "رصيد",
+    "دفع",
+
+    // كلمات إنجليزية
+    "login",
+    "verify",
+    "account",
+    "update",
+    "confirm",
+    "password",
+    "alert",
+
+    // روابط ونطاقات مشبوهة
+    "http://",
+    ".ru",
+    ".tk",
+    ".cn"
 ];
 
 const linkRegex=/https?:\/\/|bit\.ly|tinyurl|\.exe|\.zip|\.ru|\.tk|\.xyz/i;
