--- a/index.html
+++ b/index.html
@@ -128,46 +128,7 @@ const phishingWords=[
 "عاجل","تحذير","تحديث","حسابك","إيقاف","رمز","الدعم الفني",
 "أبشر","نفاذ","الراجحي","الأهلي","ساب","stc pay","مدى","سداد",
 "جائزة","مبروك","فزت","عرض وظيفة","راتب",
-"bit.ly","tinyurl",".ru",".exe",".zip",".tk",".xyz""تحقق من حسابك",
-    "تحديث بياناتك",
-    "تم إيقاف حسابك",
-    "تم تعليق حسابك",
-    "محاولة تسجيل دخول",
-    "نشاط غير معتاد",
-    "تأكيد الهوية",
-    "تأكيد حسابك",
-    "تغيير كلمة المرور",
-    "كلمة المرور",
-    "رمز التحقق",
-    "رمز الأمان",
-    "اضغط هنا",
-    "سجل الدخول الآن",
-    "الدخول إلى حسابك",
-    "تحذير أمني",
-    "إجراء عاجل",
-
-    // كلمات مالية
-    "حسابك البنكي",
-    "بطاقتك البنكية",
-    "بطاقة الائتمان",
-    "تحويل مالي",
-    "رصيد",
-    "دفع",
-
-    // كلمات إنجليزية
-    "login",
-    "verify",
-    "account",
-    "update",
-    "confirm",
-    "password",
-    "alert",
-
-    // روابط ونطاقات مشبوهة
-    "http://",
-    ".ru",
-    ".tk",
-    ".cn"
+"bit.ly","tinyurl",".ru",".exe",".zip",".tk",".xyz"
 ];
 
 const linkRegex=/https?:\/\/|bit\.ly|tinyurl|\.exe|\.zip|\.ru|\.tk|\.xyz/i;
@@ -192,7 +153,7 @@ let mitre=[];
 
 phishingWords.forEach(w=>{
 if(t.includes(w)){
-    score+=10;
+    score+=7;
     mitre.push("T1566 – Phishing");
 }
 });
@@ -214,7 +175,7 @@ if(score>=65){
     advice="يوصى بعدم الضغط على أي رابط، وعدم مشاركة أي معلومات شخصية أو مالية، وحذف الرسالة فورًا، مع الإبلاغ عنها للجهة المختصة.";
     document.getElementById("alarm").play();
 }
-else if(score>=20){
+else if(score>=30){
     result="مشبوه";
     cls="medium";
     analysis="الرسالة تحتوي على مؤشرات محتملة للتصيّد الاحتيالي أو محاولات خداع غير مباشرة، وقد تستهدف إثارة الخوف أو الاستعجال.";
