--- a/index.html
+++ b/index.html
@@ -2,82 +2,64 @@
 <html lang="ar">
 <head>
 <meta charset="UTF-8">
-<title>Cyber Threat Analyzer</title>
+<title>SOC Elite Secure Analyzer</title>
+<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
 
 <style>
-@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap');
-
 body{
-    margin:0;
-    font-family:'Cairo',sans-serif;
-    background:#020b07;
-    color:#00ff9c;
-    overflow:hidden;
+margin:0;
+font-family:'Cairo',sans-serif;
+background:radial-gradient(circle at top,#001a12,#000);
+color:#00ffb3;
+overflow:hidden;
 }
 
+/* Matrix Background */
 canvas{
-    position:fixed;
-    top:0;
-    left:0;
-    z-index:-1;
+position:fixed;
+top:0;
+left:0;
+z-index:-1;
+opacity:0.25;
 }
 
 .container{
-    width:760px;
-    max-width:95%;
-    margin:70px auto;
-    background:rgba(0,20,10,0.92);
-    padding:25px;
-    border-radius:16px;
-    box-shadow:0 0 40px #00ff9c66;
+width:950px;
+max-width:95%;
+margin:40px auto;
+background:rgba(0,20,15,0.9);
+backdrop-filter:blur(10px);
+padding:30px;
+border-radius:20px;
+box-shadow:0 0 40px #00ffb355;
 }
 
 h1{
-    text-align:center;
-    text-shadow:0 0 15px #00ff9c;
+text-align:center;
+text-shadow:0 0 15px #00ffb3;
 }
 
 textarea{
-    width:100%;
-    height:180px;
-    background:#001a0d;
-    border:1px solid #00ff9c55;
-    border-radius:10px;
-    padding:12px;
-    color:#00ff9c;
-    font-size:15px;
-    resize:none;
-}
-
-button{
-    width:100%;
-    margin-top:15px;
-    padding:14px;
-    background:#00ff9c;
-    border:none;
-    color:#002b19;
-    font-weight:bold;
-    border-radius:10px;
-    cursor:pointer;
+width:100%;
+height:200px;
+background:#000;
+border:2px solid #00ffb3;
+border-radius:12px;
+padding:15px;
+color:#00ffb3;
+font-size:17px;
+resize:none;
 }
 
 .result{
-    margin-top:20px;
-    padding:18px;
-    background:#001a0d;
-    border-radius:10px;
-    border:1px solid #00ff9c33;
-    line-height:2;
+margin-top:20px;
+font-size:18px;
+line-height:2;
 }
 
-.danger{color:#ff4d4d;font-weight:bold;}
+.safe{color:#00ffb3;font-weight:bold;}
 .medium{color:#ffd633;font-weight:bold;}
-.safe{color:#00ff9c;font-weight:bold;}
-
-.section-title{
-    font-weight:bold;
-    text-decoration:underline;
-}
+.danger{color:#ff4d4d;font-weight:bold;}
 </style>
 </head>
 
@@ -86,17 +68,14 @@ button{
 <canvas id="matrix"></canvas>
 
 <div class="container">
-<h1>🛡 Cyber Threat Analyzer</h1>
+<h1>🛡 SOC Elite Secure Analyzer</h1>
+<textarea id="msg" placeholder="الصق الرسالة هنا وسيتم التحليل تلقائياً"></textarea>
 
-<textarea id="msg" placeholder="الصق الرسالة أو البريد الإلكتروني هنا..."></textarea>
-<button onclick="analyze()">تحليل التهديد</button>
-
-<div class="result" onmouseover="readResult()">
-<p><span class="section-title">النتيجة:</span> <span id="result">—</span></p>
-<p><span class="section-title">نسبة الخطورة:</span> <span id="score">—</span></p>
-<p><span class="section-title">التحليل الأمني:</span> <span id="analysis">—</span></p>
-<p><span class="section-title">التوصية الأمنية:</span> <span id="advice">—</span></p>
-<p><span class="section-title">MITRE ATT&CK:</span> <span id="mitre">—</span></p>
+<div class="result">
+<p>النتيجة: <span id="result">—</span></p>
+<p id="analysis">—</p>
+<p id="advice">—</p>
+<p id="mitre">—</p>
 </div>
 </div>
 
@@ -105,101 +84,131 @@ button{
 </audio>
 
 <script>
-/* Matrix Background */
-const c=document.getElementById("matrix"),x=c.getContext("2d");
-c.width=innerWidth;c.height=innerHeight;
-const chars="01",fs=14,cols=c.width/fs,drops=Array(Math.floor(cols)).fill(1);
+
+/* ================= MATRIX ================= */
+const c=document.getElementById("matrix");
+const ctx=c.getContext("2d");
+c.width=window.innerWidth;
+c.height=window.innerHeight;
+
+const chars="01";
+const fontSize=14;
+const columns=c.width/fontSize;
+const drops=Array(Math.floor(columns)).fill(1);
+
 setInterval(()=>{
-x.fillStyle="rgba(0,0,0,.05)";
-x.fillRect(0,0,c.width,c.height);
-x.fillStyle="#00ff9c";
-x.font=fs+"px monospace";
+ctx.fillStyle="rgba(0,0,0,0.05)";
+ctx.fillRect(0,0,c.width,c.height);
+ctx.fillStyle="#00ffb3";
+ctx.font=fontSize+"px monospace";
 drops.forEach((y,i)=>{
-x.fillText(chars[Math.random()>0.5?1:0],i*fs,y*fs);
-if(y*fs>c.height&&Math.random()>0.975)drops[i]=0;
+ctx.fillText(chars[Math.floor(Math.random()*2)],i*fontSize,y*fontSize);
+if(y*fontSize>c.height && Math.random()>0.975) drops[i]=0;
 drops[i]++;
 });
-},33);
+},35);
 
-/* كلمات تصيّد موسعة */
-const phishingWords=[
-"urgent","verify","login","password","otp","bank","account","suspend",
-"reset","security alert","unusual activity","confirm","payment",
-"عاجل","تحذير","تحديث","حسابك","إيقاف","رمز","الدعم الفني",
-"أبشر","نفاذ","الراجحي","الأهلي","ساب","stc pay","مدى","سداد",
-"جائزة","مبروك","فزت","عرض وظيفة","راتب",
-"bit.ly","tinyurl",".ru",".exe",".zip",".tk",".xyz"
-];
-
-const linkRegex=/https?:\/\/|bit\.ly|tinyurl|\.exe|\.zip|\.ru|\.tk|\.xyz/i;
-
-let lastSpeech="";
-
-/* صوت محسّن */
-function speak(text){
-    speechSynthesis.cancel();
-    const s=new SpeechSynthesisUtterance(text);
-    s.lang="ar-SA";
-    s.rate=0.85;
-    s.pitch=1;
-    speechSynthesis.speak(s);
+/* ================= VOICE ================= */
+function speak(text,urgent=false){
+speechSynthesis.cancel();
+let s=new SpeechSynthesisUtterance(text);
+s.lang="ar-SA";
+s.rate=urgent?1:0.9;
+s.pitch=urgent?1.1:1;
+speechSynthesis.speak(s);
 }
 
-/* التحليل */
+window.onload=()=>{
+setTimeout(()=>{
+speak("نظام التحليل الأمني الاحترافي جاهز. الصق الرسالة للتحليل التلقائي.");
+},1000);
+};
+
+/* ================= THREAT ENGINE ================= */
+
+/* بنوك سعودية */
+const bankWords=/الراجحي|الأهلي|بنك الأهلي|ساب|ساب بنك|الرياض|الإنماء|البلاد|الجزيرة|بنك الرياض|بنك ساب/i;
+
+/* محافظ وخدمات */
+const walletWords=/stc pay|مدى|سداد|آبل باي|apple pay|تحويل مالي|تحويل عاجل/i;
+
+/* جهات حكومية */
+const govWords=/أبشر|نفاذ|وزارة الداخلية|الزكاة|الضريبة|هيئة الزكاة|توكلنا/i;
+
+/* شحن */
+const shippingWords=/ارامكس|سمسا|dhl|فاتورة شحن|رسوم جمركية/i;
+
+/* احتيال جوائز */
+const scamWords=/مبروك|فزت|جائزة|سحب|هدية|عرض حصري|عرض خاص/i;
+
+/* بيانات حساسة */
+const sensitive=/password|otp|رمز|cvv|iban|كلمة المرور|رقم البطاقة|تحديث بيانات|verify|login/i;
+
+/* استعجال */
+const urgency=/عاجل|فوراً|خلال\s?\d+\s?ساعة|urgent|immediately/i;
+
+/* روابط */
+const links=/https?:\/\/|bit\.ly|tinyurl|\.ru|\.xyz|\.tk|\.top|\.click|\.gq|\.cf|\.ml/i;
+
+const puny=/xn--/i;
+
+let lastText="";
+
 function analyze(){
-let t=document.getElementById("msg").value.toLowerCase();
+let text=document.getElementById("msg").value;
+let t=text.toLowerCase();
+if(t===lastText) return;
+lastText=t;
+if(t.length<5) return;
+
 let score=0;
 let mitre=[];
 
-phishingWords.forEach(w=>{
-if(t.includes(w)){
-    score+=7;
-    mitre.push("T1566 – Phishing");
-}
-});
+if(bankWords.test(t)){score+=15; mitre.push("Financial Targeting");}
+if(walletWords.test(t)){score+=15;}
+if(govWords.test(t)){score+=15;}
+if(shippingWords.test(t)){score+=10;}
+if(scamWords.test(t)){score+=15;}
+if(sensitive.test(t)){score+=25; mitre.push("T1555 Credential Access");}
+if(urgency.test(t)){score+=15; mitre.push("T1566 Phishing");}
+if(links.test(t)){score+=25; mitre.push("T1204 User Execution");}
+if(puny.test(t)){score+=20;}
 
-if(linkRegex.test(t)){
-    score+=25;
-    mitre.push("T1204 – User Execution");
-}
+if(score>100) score=100;
 
 let result="آمن";
-let cls="safe";
-let analysis="لم يتم اكتشاف مؤشرات تصيّد أو تهديد واضح في الرسالة.";
-let advice="يمكنك التعامل مع الرسالة بشكل طبيعي مع الاستمرار بالحذر.";
+let analysis="لا توجد مؤشرات تهديد واضحة.";
+let advice="يمكن التعامل بحذر طبيعي.";
+let urgent=false;
 
-if(score>=65){
-    result="خطر عالي";
-    cls="danger";
-    analysis="تم اكتشاف رسالة تصيّد احتيالي عالية الخطورة تعتمد على الهندسة الاجتماعية، وتهدف إلى خداع المستخدم للحصول على بيانات حساسة مثل كلمات المرور أو رموز التحقق أو البيانات البنكية.";
-    advice="يوصى بعدم الضغط على أي رابط، وعدم مشاركة أي معلومات شخصية أو مالية، وحذف الرسالة فورًا، مع الإبلاغ عنها للجهة المختصة.";
-    document.getElementById("alarm").play();
+if(score>=70){
+result="خطر عالي";
+analysis="تم اكتشاف مؤشرات تصيّد واحتيال متقدمة تستهدف بيانات مالية أو شخصية.";
+advice="لا تضغط روابط ولا تشارك معلومات واحذف الرسالة فوراً.";
+urgent=true;
+document.getElementById("alarm").play();
 }
-else if(score>=30){
-    result="مشبوه";
-    cls="medium";
-    analysis="الرسالة تحتوي على مؤشرات محتملة للتصيّد الاحتيالي أو محاولات خداع غير مباشرة، وقد تستهدف إثارة الخوف أو الاستعجال.";
-    advice="يوصى بالتحقق من مصدر الرسالة، وعدم التفاعل مع الروابط أو المرفقات حتى التأكد من صحتها.";
+else if(score>=40){
+result="مشبوه";
+analysis="الرسالة تحتوي على أنماط قد تشير إلى تصيّد أو احتيال.";
+advice="تحقق من المصدر قبل التفاعل.";
 }
 
-document.getElementById("result").innerHTML=`<span class="${cls}">${result}</span>`;
-document.getElementById("score").innerText=score+"%";
+document.getElementById("result").innerHTML=result;
 document.getElementById("analysis").innerText=analysis;
 document.getElementById("advice").innerText=advice;
-document.getElementById("mitre").innerText=[...new Set(mitre)].join(", ")||"—";
+document.getElementById("mitre").innerText=mitre.join(", ")||"—";
 
-lastSpeech=`نتيجة التحليل ${result}. ${analysis} التوصية الأمنية: ${advice}`;
-speak(lastSpeech);
+speak(`نتيجة التحليل ${result}. نسبة الخطورة ${score} بالمئة. ${analysis}. التوصية: ${advice}`,urgent);
 }
 
-/* قراءة عند المرور */
-function readResult(){
-if(lastSpeech) speak(lastSpeech);
-}
+/* تحليل تلقائي */
+document.getElementById("msg").addEventListener("input",()=>{
+setTimeout(analyze,700);
+});
 
-/* قراءة عند التركيز */
-document.getElementById("msg").addEventListener("focus",()=>{
-speak("مربع إدخال الرسالة. الرجاء لصق النص ثم الضغط على زر تحليل التهديد.");
+document.getElementById("msg").addEventListener("paste",()=>{
+setTimeout(analyze,500);
 });
 </script>
 
