--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="ar">
 <head>
 <meta charset="UTF-8">
-<title>SOC Elite Secure Analyzer</title>
+<title>Aegis Sentinel™ – Cyber Threat Intelligence Platform</title>
 <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 <style>
 body{
@@ -11,206 +12,186 @@ margin:0;
 font-family:'Cairo',sans-serif;
 background:radial-gradient(circle at top,#001a12,#000);
 color:#00ffb3;
-overflow:hidden;
 }
 
-/* Matrix Background */
-canvas{
-position:fixed;
-top:0;
-left:0;
-z-index:-1;
-opacity:0.25;
+header{
+text-align:center;
+padding:25px;
+border-bottom:1px solid #00ffb333;
+}
+
+header h1{
+margin:0;
+font-size:32px;
+letter-spacing:1px;
+}
+
+header p{
+margin:5px 0;
+color:#8affda;
+font-size:14px;
 }
 
 .container{
-width:950px;
-max-width:95%;
-margin:40px auto;
-background:rgba(0,20,15,0.9);
-backdrop-filter:blur(10px);
+max-width:1200px;
+margin:20px auto;
 padding:30px;
-border-radius:20px;
-box-shadow:0 0 40px #00ffb355;
-}
-
-h1{
-text-align:center;
-text-shadow:0 0 15px #00ffb3;
+background:rgba(0,20,15,0.9);
+border-radius:25px;
+box-shadow:0 0 60px #00ffb344;
 }
 
 textarea{
 width:100%;
-height:200px;
+height:140px;
 background:#000;
 border:2px solid #00ffb3;
-border-radius:12px;
+border-radius:15px;
 padding:15px;
 color:#00ffb3;
-font-size:17px;
+font-size:16px;
 resize:none;
 }
 
-.result{
+.flex{
+display:flex;
+gap:20px;
+flex-wrap:wrap;
 margin-top:20px;
-font-size:18px;
-line-height:2;
 }
 
-.safe{color:#00ffb3;font-weight:bold;}
-.medium{color:#ffd633;font-weight:bold;}
-.danger{color:#ff4d4d;font-weight:bold;}
+.card{
+flex:1;
+min-width:280px;
+background:#000;
+padding:20px;
+border-radius:15px;
+box-shadow:0 0 20px #00ffb322;
+}
+
+.progress{
+height:14px;
+background:#111;
+border-radius:10px;
+margin-top:10px;
+}
+.bar{
+height:100%;
+width:0%;
+background:#00ffb3;
+border-radius:10px;
+transition:0.5s;
+}
+
+footer{
+text-align:center;
+padding:15px;
+margin-top:20px;
+font-size:12px;
+color:#8affda;
+border-top:1px solid #00ffb333;
+}
 </style>
 </head>
 
 <body>
 
-<canvas id="matrix"></canvas>
+<header>
+<h1>🛡 Aegis Sentinel™</h1>
+<p>Cyber Threat Intelligence & SOC Simulation Platform</p>
+<p>Version 1.0 – Conference Edition</p>
+</header>
 
 <div class="container">
-<h1>🛡 SOC Elite Secure Analyzer</h1>
-<textarea id="msg" placeholder="الصق الرسالة هنا وسيتم التحليل تلقائياً"></textarea>
 
-<div class="result">
-<p>النتيجة: <span id="result">—</span></p>
-<p id="analysis">—</p>
-<p id="advice">—</p>
+<textarea id="msg" placeholder="Paste suspicious message here for real-time analysis..."></textarea>
+
+<div class="flex">
+
+<div class="card">
+<h3>Threat Status</h3>
+<p id="status">—</p>
+<p>Risk Score: <span id="score">0</span>%</p>
+<div class="progress"><div class="bar" id="bar"></div></div>
+<p id="classification"></p>
+<p><strong>Domain Reputation:</strong> <span id="domainRep">—</span></p>
+</div>
+
+<div class="card">
+<h3>MITRE Technique Mapping</h3>
 <p id="mitre">—</p>
+<h3>Live Threat Feed</h3>
+<p id="feed">System Ready...</p>
+</div>
+
+<div class="card">
+<h3>Detection Statistics</h3>
+<canvas id="chart"></canvas>
+</div>
+
 </div>
 </div>
 
-<audio id="alarm">
+<footer>
+Aegis Sentinel™ is a simulated Threat Intelligence & Detection Engine inspired by MITRE ATT&CK framework and OWASP security principles.  
+This platform is developed for academic and research demonstration purposes.
+</footer>
+
+<audio id="highSound">
 <source src="https://assets.mixkit.co/active_storage/sfx/2571/2571-preview.mp3">
+</audio>
+
+<audio id="mediumSound">
+<source src="https://assets.mixkit.co/active_storage/sfx/2568/2568-preview.mp3">
 </audio>
 
 <script>
 
-/* ================= MATRIX ================= */
-const c=document.getElementById("matrix");
-const ctx=c.getContext("2d");
-c.width=window.innerWidth;
-c.height=window.innerHeight;
+let stats={safe:0,medium:0,high:0};
 
-const chars="01";
-const fontSize=14;
-const columns=c.width/fontSize;
-const drops=Array(Math.floor(columns)).fill(1);
-
-setInterval(()=>{
-ctx.fillStyle="rgba(0,0,0,0.05)";
-ctx.fillRect(0,0,c.width,c.height);
-ctx.fillStyle="#00ffb3";
-ctx.font=fontSize+"px monospace";
-drops.forEach((y,i)=>{
-ctx.fillText(chars[Math.floor(Math.random()*2)],i*fontSize,y*fontSize);
-if(y*fontSize>c.height && Math.random()>0.975) drops[i]=0;
-drops[i]++;
-});
-},35);
-
-/* ================= VOICE ================= */
-function speak(text,urgent=false){
-speechSynthesis.cancel();
-let s=new SpeechSynthesisUtterance(text);
-s.lang="ar-SA";
-s.rate=urgent?1:0.9;
-s.pitch=urgent?1.1:1;
-speechSynthesis.speak(s);
-}
-
-window.onload=()=>{
-setTimeout(()=>{
-speak("نظام التحليل الأمني الاحترافي جاهز. الصق الرسالة للتحليل التلقائي.");
-},1000);
+const patterns={
+urgency:/verify your account|تحقق من حسابك الآن|سيتم إيقاف حسابك|نشاط غير معتاد/i,
+sensitive:/otp|cvv|رقم البطاقة|كلمة المرور|iban/i,
+links:/https?:\/\/|\.ru|\.xyz|bit\.ly|secure-login|verify-now/i,
+financial:/استرداد|refund|دفعة معلقة/i,
+puny:/xn--/i
 };
 
-/* ================= THREAT ENGINE ================= */
+function domainReputation(text){
+let match=text.match(/https?:\/\/([^\/\s]+)/);
+if(!match) return "No Domain Detected";
+let domain=match[1];
 
-/* بنوك سعودية */
-const bankWords=/الراجحي|الأهلي|بنك الأهلي|ساب|ساب بنك|الرياض|الإنماء|البلاد|الجزيرة|بنك الرياض|بنك ساب/i;
+if(domain.includes(".ru")||domain.includes(".xyz"))
+return "High Risk TLD";
 
-/* محافظ وخدمات */
-const walletWords=/stc pay|مدى|سداد|آبل باي|apple pay|تحويل مالي|تحويل عاجل/i;
+if(domain.includes("xn--"))
+return "Punycode Suspicious";
 
-/* جهات حكومية */
-const govWords=/أبشر|نفاذ|وزارة الداخلية|الزكاة|الضريبة|هيئة الزكاة|توكلنا/i;
+if(domain.includes("secure")||domain.includes("verify"))
+return "Keyword Manipulation";
 
-/* شحن */
-const shippingWords=/ارامكس|سمسا|dhl|فاتورة شحن|رسوم جمركية/i;
-
-/* احتيال جوائز */
-const scamWords=/مبروك|فزت|جائزة|سحب|هدية|عرض حصري|عرض خاص/i;
-
-/* بيانات حساسة */
-const sensitive=/password|otp|رمز|cvv|iban|كلمة المرور|رقم البطاقة|تحديث بيانات|verify|login/i;
-
-/* استعجال */
-const urgency=/عاجل|فوراً|خلال\s?\d+\s?ساعة|urgent|immediately/i;
-
-/* روابط */
-const links=/https?:\/\/|bit\.ly|tinyurl|\.ru|\.xyz|\.tk|\.top|\.click|\.gq|\.cf|\.ml/i;
-
-const puny=/xn--/i;
-
-let lastText="";
+return "Unknown / Medium Risk";
+}
 
 function analyze(){
-let text=document.getElementById("msg").value;
-let t=text.toLowerCase();
-if(t===lastText) return;
-lastText=t;
+let t=document.getElementById("msg").value.toLowerCase();
 if(t.length<5) return;
 
 let score=0;
 let mitre=[];
 
-if(bankWords.test(t)){score+=15; mitre.push("Financial Targeting");}
-if(walletWords.test(t)){score+=15;}
-if(govWords.test(t)){score+=15;}
-if(shippingWords.test(t)){score+=10;}
-if(scamWords.test(t)){score+=15;}
-if(sensitive.test(t)){score+=25; mitre.push("T1555 Credential Access");}
-if(urgency.test(t)){score+=15; mitre.push("T1566 Phishing");}
-if(links.test(t)){score+=25; mitre.push("T1204 User Execution");}
-if(puny.test(t)){score+=20;}
+if(patterns.urgency.test(t)){score+=25; mitre.push("T1566 Phishing");}
+if(patterns.sensitive.test(t)){score+=30; mitre.push("T1555 Credential Access");}
+if(patterns.links.test(t)){score+=25; mitre.push("T1204 User Execution");}
+if(patterns.financial.test(t)){score+=20;}
+if(patterns.puny.test(t)){score+=20;}
+
+let domainStatus=domainReputation(t);
+if(domainStatus==="High Risk TLD") score+=25;
+if(domainStatus==="Punycode Suspicious") score+=30;
 
 if(score>100) score=100;
 
-let result="آمن";
-let analysis="لا توجد مؤشرات تهديد واضحة.";
-let advice="يمكن التعامل بحذر طبيعي.";
-let urgent=false;
-
-if(score>=70){
-result="خطر عالي";
-analysis="تم اكتشاف مؤشرات تصيّد واحتيال متقدمة تستهدف بيانات مالية أو شخصية.";
-advice="لا تضغط روابط ولا تشارك معلومات واحذف الرسالة فوراً.";
-urgent=true;
-document.getElementById("alarm").play();
-}
-else if(score>=40){
-result="مشبوه";
-analysis="الرسالة تحتوي على أنماط قد تشير إلى تصيّد أو احتيال.";
-advice="تحقق من المصدر قبل التفاعل.";
-}
-
-document.getElementById("result").innerHTML=result;
-document.getElementById("analysis").innerText=analysis;
-document.getElementById("advice").innerText=advice;
-document.getElementById("mitre").innerText=mitre.join(", ")||"—";
-
-speak(`نتيجة التحليل ${result}. نسبة الخطورة ${score} بالمئة. ${analysis}. التوصية: ${advice}`,urgent);
-}
-
-/* تحليل تلقائي */
-document.getElementById("msg").addEventListener("input",()=>{
-setTimeout(analyze,700);
-});
-
-document.getElementById("msg").addEventListener("paste",()=>{
-setTimeout(analyze,500);
-});
-</script>
-
-</body>
-</html>
+let status="Safe";
+if(score>=75){status="High Risk";stats.
